<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="content_uri_authority">org.exthmui.share.files</string>
    <string name="device_name_default">Mysterious Device</string>
    <string name="connection_status_available">Available</string>
    <string name="connection_status_unavailable">Unavailable</string>
    <string name="connection_status_transmitting">Transmitting</string>
    <string name="connection_status_unknown">Unknown</string>
    <string name="prefs_key_global_destination_directory" translatable="false">global_destination_directory</string>
    <string name="prefs_title_global_destination_directory" tools:ignore="UnusedResources">Destination Directory</string>
    <string name="prefs_default_global_destination_directory" translatable="false"/>
    <string name="prefs_summary_global_destination_directory_default" translatable="false" tools:ignore="UnusedResources">Download Directory</string>
    <string name="prefs_key_global_default_file_name" translatable="false">global_default_file_name</string>
    <string name="prefs_title_global_default_file_name" tools:ignore="UnusedResources">Default file name</string>
    <string name="prefs_default_global_default_file_name" translatable="false">unknown</string>
    <string name="prefs_summary_global_default_file_name_default" translatable="false" tools:ignore="UnusedResources">unknown</string>
    <string name="prefs_key_global_device_name" translatable="false" tools:ignore="UnusedResources">global_device_name</string>
    <string name="prefs_title_global_device_name" tools:ignore="UnusedResources">Device name</string>
    <string name="prefs_default_global_device_name" tools:ignore="UnusedResources">@null</string>
    <string name="prefs_summary_global_device_name_default" tools:ignore="UnusedResources">Your device name</string>
    <string name="prefs_key_global_peer_id" translatable="false" tools:ignore="UnusedResources">global_peer_id</string>
    <string name="prefs_title_global_peer_id" tools:ignore="UnusedResources">Device ID</string>
    <string name="prefs_default_global_peer_id" translatable="false" tools:ignore="UnusedResources">@null</string>
    <string name="prefs_summary_global_peer_id_hidden" tools:ignore="UnusedResources">Tap here to regenerate your identity</string>
    <string name="prefs_summary_global_peer_id_show" formatted="true" tools:ignore="UnusedResources"><xliff:g id="peer_id" example="109564bb-2af9-4e00-8d5d-4860f548301b">%1$s</xliff:g> (Tap here to regenerate)</string>
    <string name="toast_global_peer_id_regenerated" formatted="true" tools:ignore="UnusedResources">Device ID regenerated</string>
    <string name="prefs_key_global_use_saf" translatable="false">global_use_saf</string>
    <string name="prefs_title_global_use_saf">Use SAF</string>
    <string name="prefs_summary_global_use_saf">Whether to use SAF framework(May cause performance problem)</string>
    <string name="prefs_title_global_permissions_not_granted_notification" formatted="true">Grant permissions for posting notifications</string>
    <string name="prefs_summary_global_permissions_not_granted_notification">Touch here to grant for permission for posting notifications</string>
    <string name="prefs_title_global_permissions_not_granted_discover" formatted="true">Grant permissions for <xliff:g id="plugin_friendly_name" example="WiFi Direct">%1$s</xliff:g>(Discover)</string>
    <string name="prefs_summary_global_permissions_not_granted_discover">Touch here to grant for permission for sending/discovering</string>
    <string name="prefs_title_global_permissions_not_granted_receive" formatted="true">Grant permissions for <xliff:g id="plugin_friendly_name" example="WiFi Direct">%1$s</xliff:g>(Receive)</string>
    <string name="prefs_summary_global_permissions_not_granted_receive">Touch here to grant for permission for receiving</string>
    <string name="notification_channel_group_web_name">Web</string>
    <string name="notification_channel_group_web_description">Web sharing related notifications</string>
    <string name="notification_channel_group_progress_name">Progresses</string>
    <string name="notification_channel_group_progress_description">Show you sending/receiving progresses</string>
    <string name="notification_channel_group_service_name">Foreground Services</string>
    <string name="notification_channel_group_service_description">Working needed foreground services</string>
    <string name="notification_channel_group_request_name">Requests</string>
    <string name="notification_channel_group_request_description">Show you request needing confirming</string>
    <string name="notification_channel_request_name">Requests</string>
    <string name="notification_channel_request_description">Show you receiving requests</string>
    <string name="notification_channel_receive_name">Receive</string>
    <string name="notification_channel_receive_description">Show you receiving progress</string>
    <string name="notification_channel_receive_service_name">Receiving Services</string>
    <string name="notification_channel_receive_service_description">Receiving related foreground service</string>
    <string name="notification_title_receive_service">Receiver Service running</string>
    <string name="notification_action_open_file">Open File</string>
    <string name="notification_action_cancel">Cancel</string>
    <string name="notification_action_accept">Accept</string>
    <string name="notification_action_reject">Reject</string>
    <string name="notification_title_receive_request">Share Request</string>
    <plurals name="notification_text_receive_request">
        <item quantity="one">\"<xliff:g id="sender_name" example="ISNing's Phone">%1$s</xliff:g>\" want\'s to share <xliff:g id="file_count" example="1">%2$d</xliff:g> file with you</item>
        <item quantity="other">\"<xliff:g id="sender_name" example="ISNing's Phone">%1$s</xliff:g>\" want\'s to share <xliff:g id="file_count" example="3">%2$d</xliff:g> files with you</item>
    </plurals>
    <plurals name="notification_text_expanded_receive_request">
        <item quantity="other">\"<xliff:g id="sender_name" example="ISNing's Phone">%1$s</xliff:g>\" want\'s to share \"<xliff:g id="file_names" example="base.apk\nexTHmUI-OFFICIAL.zip">%2$s</xliff:g>\" with you</item>
    </plurals>
    <string name="notification_channel_send_name">Send</string>
    <string name="notification_channel_send_description">Show you sending progress</string>
    <string name="notification_channel_send_service_name">Sending Services</string>
    <string name="notification_channel_send_service_description">Sending related foreground service</string>
    <string name="notification_title_send_service">Discover/Sender Service running</string>
    <string name="notification_title_send_initializing">Initializing sender</string>
    <plurals name="notification_title_sending">
        <item quantity="one">Sending file</item>
        <item quantity="other">Sending files</item>
    </plurals>
    <plurals name="notification_text_sending">
        <item quantity="other">@string/notification_text_progress</item>
    </plurals>
    <plurals name="notification_title_sending_failed">
        <item quantity="one">Failed sending file to <xliff:g id="target_name" example="ISNing's Tablet">%1$s</xliff:g></item>
        <item quantity="other">Failed sending files to <xliff:g id="target_name" example="ISNing's Tablet">%1$s</xliff:g></item>
    </plurals>
    <plurals name="notification_text_sending_failed">
        <item quantity="other">Reason: <xliff:g id="reason">%1$s</xliff:g></item>
    </plurals>
    <plurals name="notification_text_expanded_sending_failed">
        <item quantity="one">Reason: <xliff:g id="reason">%1$s</xliff:g>\nFile: \"<xliff:g id="file_name" example="base.apk">%2$s</xliff:g>\"</item>
        <item quantity="other">Reason: <xliff:g id="reason">%1$s</xliff:g>\nFiles: <xliff:g id="file_names" example="base.apk\nexTHmUI-OFFICIAL.zip">%2$s</xliff:g></item>
    </plurals>
    <plurals name="notification_title_sending_succeeded">
        <item quantity="one">Succeeded sending file to <xliff:g id="target_name" example="ISNing's Tablet">%1$s</xliff:g></item>
        <item quantity="other">Succeeded sending files to <xliff:g id="target_name" example="ISNing's Tablet">%1$s</xliff:g></item>
    </plurals>
    <plurals name="notification_text_sending_succeeded">
        <item quantity="one"><xliff:g id="file_name" example="base.apk">%1$s</xliff:g></item>
        <item quantity="other"><xliff:g id="file_count">%2$s</xliff:g> files in total, expand notification to see complete list</item>
    </plurals>
    <plurals name="notification_text_expanded_sending_succeeded">
        <item quantity="one">@null</item>
        <item quantity="other"><xliff:g id="file_names" example="base.apk\nexTHmUI-OFFICIAL.zip">%1$s</xliff:g></item>
    </plurals>
    <string name="dialog_title_accept_or_reject_request" formatted="true"><xliff:g id="sender_name" example="ISNing's Phone">%1$s</xliff:g> request to send you file \"<xliff:g id="file_name" example="base.apk">%2$s</xliff:g>\"</string>
    <string name="dialog_accept_or_reject_request_size" formatted="true">Size: <xliff:g id="file_size" example="1.86MB">%1$s</xliff:g></string>
    <string name="dialog_action_accept">Accept</string>
    <string name="dialog_action_reject">Reject</string>
    <string name="notification_title_receive_initializing">Initializing receiver</string>
    <string name="notification_title_receive_waiting">Ready for receive</string>
    <string name="notification_text_progress"><xliff:g id="size_transmitted" example="18.6 MB">%1$s</xliff:g> transmitted, <xliff:g id="size_total" example="93.2 MB">%2$s</xliff:g> in total</string>
    <plurals name="notification_title_receiving">
        <item quantity="one">Receiving file</item>
        <item quantity="other">Receiving files</item>
    </plurals>
    <plurals name="notification_text_receiving">
        <item quantity="other">@string/notification_text_progress</item>
    </plurals>
    <plurals name="notification_title_receiving_failed">
        <item quantity="one">Failed receiving file from <xliff:g id="target_name" example="ISNing's Tablet">%1$s</xliff:g></item>
        <item quantity="other">Failed receiving files from <xliff:g id="target_name" example="ISNing's Tablet">%1$s</xliff:g></item>
    </plurals>
    <plurals name="notification_text_receiving_failed">
        <item quantity="other">Reason: <xliff:g id="reason">%1$s</xliff:g></item>
    </plurals>
    <plurals name="notification_text_expanded_receiving_failed">
        <item quantity="one">Reason: <xliff:g id="reason">%1$s</xliff:g>\nFile: \"<xliff:g id="file_name" example="base.apk">%2$s</xliff:g>\"</item>
        <item quantity="other">Reason: <xliff:g id="reason">%1$s</xliff:g>\nFiles: <xliff:g id="file_names" example="base.apk\nexTHmUI-OFFICIAL.zip">%2$s</xliff:g></item>
    </plurals>
    <plurals name="notification_title_receiving_succeeded">
        <item quantity="one">Succeeded receiving file from <xliff:g id="target_name" example="ISNing's Tablet">%1$s</xliff:g></item>
        <item quantity="other">Succeeded receiving files from <xliff:g id="target_name" example="ISNing's Tablet">%1$s</xliff:g></item>
    </plurals>
    <plurals name="notification_text_receiving_succeeded">
        <item quantity="one"><xliff:g id="file_name" example="base.apk">%1$s</xliff:g></item>
        <item quantity="other"><xliff:g id="file_count">%2$s</xliff:g> files in total, expand notification to see complete list</item>
    </plurals>
    <plurals name="notification_text_expanded_receiving_succeeded">
        <item quantity="one">@null</item>
        <item quantity="other"><xliff:g id="file_names" example="base.apk\nexTHmUI-OFFICIAL.zip">%1$s</xliff:g></item>
    </plurals>
</resources>