<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <org.exthmui.share.shared.preferences.ClickableStringPreference
        android:defaultValue="@string/prefs_default_global_destination_directory"
        android:key="@string/prefs_key_global_destination_directory"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/prefs_title_global_destination_directory" />

    <EditTextPreference
        android:defaultValue="@string/prefs_default_global_default_file_name"
        android:key="@string/prefs_key_global_default_file_name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/prefs_title_global_default_file_name"
        app:defaultValue="@string/prefs_default_global_default_file_name" />
</PreferenceScreen>