<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_request_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dialog_title_accept_or_reject_request"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dialog_request_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dialog_accept_or_reject_request_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_request_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_request_accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/dialog_action_accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_request_size" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_request_reject_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/dialog_action_reject"
        app:layout_constraintEnd_toStartOf="@id/dialog_request_accept_button"
        app:layout_constraintTop_toBottomOf="@id/dialog_request_size" />
</androidx.constraintlayout.widget.ConstraintLayout>